refactor: metodos da classe integer